<?xml version="1.0"?>
<package format="2">
  <name>slam</name>
  <version>0.0.0</version>
  <description>The slam package</description>

  <maintainer email="suho@todo.todo">suho</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>



  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>



  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>



  <export>
  </export>
</package>
